--- a/angular.json
+++ b/angular.json
@@ -35,9 +35,11 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/css/bootstrap.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
           },
           "configurations": {
             "production": {
@@ -94,9 +96,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+            "node_modules/bootstrap/css/bootstrap.css",
+            "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+            "src/styles.css"
             ],
-            "scripts": []
+            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
           }
         }
       }
