--- a/angular.json
+++ b/angular.json
@@ -35,9 +35,9 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/css/bootstrap.css",
-              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-              "src/styles.css"
+            "src/styles.css",
+            "node_modules/bootstrap/dist/css/bootstrap.css",
+            "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
           },
@@ -96,9 +96,10 @@
               "src/assets"
             ],
             "styles": [
-            "node_modules/bootstrap/css/bootstrap.css",
-            "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-            "src/styles.css"
+            "src/styles.css",
+            "node_modules/bootstrap/dist/css/bootstrap.css",
+            "node_modules/bootstrap-icons/font/bootstrap-icons.css"
+
             ],
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
           }
