--- a/angular.json
+++ b/angular.json
@@ -35,9 +35,10 @@
               "src/assets"
             ],
             "styles": [
-            "src/styles.css",
-            "node_modules/bootstrap/dist/css/bootstrap.css",
-            "node_modules/bootstrap-icons/font/bootstrap-icons.css"
+              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
           },
@@ -96,10 +97,10 @@
               "src/assets"
             ],
             "styles": [
-            "src/styles.css",
-            "node_modules/bootstrap/dist/css/bootstrap.css",
-            "node_modules/bootstrap-icons/font/bootstrap-icons.css"
-
+              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
           }
